# fileskadis

./: .gitignore  Makefile  README.md  pyproject.toml
src/fileskadis/: __init__.py
src/fileskadis/core/: __init__.py  aggregator.py  masker.py  separator.py  utils.py
src/fileskadis/ui/: __init__.py  app.py
tests/: __init__.py  test_aggregator.py  test_masker.py  test_separator.py
